# gopherbot

./: .gitignore  Config.hs  DB.hs  DirParser.hs  Lock.hs  NetClient.hs  RobotsTxt.hs  Types.hs  Utils.hs  gopherbot.cabal  gopherbot.hs  shell.nix  stack.yaml
