cabal-version: >=1.25
name: gopherbot
version: 0.1.0
license: GPL
maintainer: John Goerzen <jgoerzen@complete.org>
author: John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING
category: Network
synopsis: Spidering robot to download files from Gopherspace
stability: Alpha
copyright: Copyright (c) 2005-2006 John Goerzen
build-type: Simple

executable gopherbot
    ghc-options: -O2 -Wall
    main-is: gopherbot.hs
    default-language: Haskell2010
    build-depends: base
                 , containers
                 , convertible
                 , directory
                 , filepath
                 , network
                 , network-uri
                 , old-time
                 , parsec
                 , unix
                 , HDBC-postgresql >= 2.3.2.5
                 , HDBC
    other-modules: Config
                   DB
                   DirParser
                   NetClient
                   RobotsTxt
                   Types
                   Utils